plugins { id 'com.android.application' }
android {
    namespace 'com.nutrifit.app'
    compileSdk 36
    defaultConfig {
        applicationId 'com.nutrifit.app'
        minSdk 26
        targetSdk 36
        versionCode 6
        versionName '2.3'
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    buildTypes {
        qa {
            initWith debug
            applicationIdSuffix '.qa'
            matchingFallbacks = ['debug']
        }
    }
    testOptions {
        unitTests.all { systemProperty 'catalogPath', file('src/main/assets').absolutePath }
    }
    testBuildType 'qa'
}
dependencies {
    implementation 'com.google.mlkit:translate:17.0.3'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.8.7'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.8.7'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.6.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
}
